--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 70px;
 }
 
 .card{
@@ -22,6 +23,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
 }
 
 .card-title {
